--- a/SkillCoacher/Pages/SubmitChapter.cshtml
+++ b/SkillCoacher/Pages/SubmitChapter.cshtml
@@ -11,7 +11,7 @@
 <script src="https://cdn.ckeditor.com/ckeditor5/30.0.0/classic/ckeditor.js"></script>
 <div class="col-md-8 blog-main">
     <form method="post">
-        <h2 class="blog-post-title">Опубликовать курс</h2>
+        <h2 class="blog-post-title">Изменить раздел</h2>
         <hr />
         <input asp-for="CurrentChapter.Id" type="hidden" />
         <h4 >Название Раздела</h4>
@@ -37,7 +37,7 @@
 
 <div class="col-md-2 offset-md-6 pt-lg-4"">
 
-    <button type="button" class="btn btn-success" onclick="ajaxTest();">Добавить раздел</button>
+    <button type="button" class="btn btn-success" onclick="ajaxTest();">Сохранить изменения</button>
 </div>
 
 <script type="text/javascript">
